<resources>
    <string name="app_title">UdaMovies</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_spinner">Most popular</string>

    <string name="release_date">Release date:</string>
    <string name="vote_average">Average rating:</string>
    <string name="votes">votes</string>
    <string name="trailer">Trailer</string>
    <string name="overview_title">Overview</string>
    <string name="reviews_title">Reviews</string>

    <string name="reviews_placeholder">There is no reviews for this film, sorry.</string>
    <string name="backdrop_description">image of the movie as a banner</string>
    <string name="poster_description">poster of the movie</string>

    <string name="menu_most_popular">Most popular</string>
    <string name="menu_highest_rated">Highest-rated</string>
    <string name="menu_favorites">Favorites</string>

    <string name="sort_pref">sortBy</string>
    <string name="title_pref">title</string>

</resources>
